JPIE : Issue 203 Ajout de boutons plus visibles dans mon compte (editer infos et changer mdp)

--- a/trunk/css/MonCompte/MonCompte.css
+++ b/trunk/css/MonCompte/MonCompte.css
@@ -37,3 +37,17 @@
 .input-edt-compte {
 	width:190px;
 }
+
+#btn-edt-pass, #btn-edt-compte {
+	width:100%;
+}
+
+#btn-edt-compte {
+	margin-top:5px;
+	margin-bottom:5px;
+}
+
+#btn-edt-valider, #btn-edt-annuler {
+	width: 50%;
+	margin-bottom:5px;
+}
